<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:fillViewport="true">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:padding="@dimen/_10sdp">


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivLogo"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_30sdp"
                android:src="@drawable/ic_logo_blue" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtResetPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ivLogo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_50sdp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/reset_password"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/txtSizeXLarge" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPassResetReq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtResetPass"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:text="@string/password_reset_request"
                android:textColor="@color/colorBlack"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:textSize="@dimen/txtSizeSmall"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etEnterCode"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btnNormalSize"
                android:layout_below="@id/tvPassResetReq"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/bg_edit_rounded"
                android:hint="@string/enter_code"
                android:inputType="phone"
                android:maxLength="10"
                android:digits="0123456789"
                android:minHeight="@dimen/btnNormalSize"
                android:paddingHorizontal="@dimen/_10sdp"
                android:singleLine="true"
                android:elevation="@dimen/_1sdp"
                android:textColorHint="@color/color_4D4D4D"
                android:fontFamily="@font/poppins_regular"
                android:textSize="@dimen/txtSizeXNormal" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etNewPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btnNormalSize"
                android:layout_below="@id/etEnterCode"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/bg_edit_rounded"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:elevation="@dimen/_1sdp"
                android:minHeight="@dimen/btnNormalSize"
                android:paddingHorizontal="@dimen/_10sdp"
                android:singleLine="true"
                android:textColorHint="@color/color_4D4D4D"
                android:textSize="@dimen/txtSizeXNormal" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etConfirmNewPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btnNormalSize"
                android:layout_below="@id/etNewPassword"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/bg_edit_rounded"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/confirm_new_password"
                android:inputType="textPassword"
                android:elevation="@dimen/_1sdp"
                android:minHeight="@dimen/btnNormalSize"
                android:paddingHorizontal="@dimen/_10sdp"
                android:singleLine="true"
                android:textColorHint="@color/color_4D4D4D"
                android:textSize="@dimen/txtSizeXNormal" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btnNormalSize"
                android:layout_below="@id/etConfirmNewPassword"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/bg_rounded_blue_5sdp"
                android:fontFamily="@font/poppins_regular"
                android:foreground="@drawable/ripple_rec"
                android:minHeight="@dimen/btnNormalSize"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:elevation="@dimen/_2sdp"
                android:textSize="@dimen/txtSizeNormal" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvResendOtp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resend_otp"
                android:textColor="@color/color_0057FF"
                android:textAllCaps="false"
                android:textSize="@dimen/txtSizeXNormal"
                android:layout_below="@id/btnSubmit"
                android:fontFamily="@font/poppins_medium"
                android:foreground="@drawable/ripple_rec"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_centerHorizontal="true"
                android:padding="@dimen/_5sdp"
                />

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>
</layout>