<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:clipToPadding="false"
        android:orientation="vertical">

        <include
            android:id="@+id/appBar"
            layout="@layout/layout_header" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <androidx.appcompat.widget.AppCompatRatingBar
                android:id="@+id/myRatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_30sdp"
                android:isIndicator="false"
                android:numStars="5"
                android:rating="1"
                android:theme="@style/RatingBar" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btnNormalSize"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/bg_edit_rounded"
                android:elevation="@dimen/_1sdp"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/name"
                android:inputType="text"
                android:minHeight="@dimen/btnNormalSize"
                android:paddingHorizontal="@dimen/_10sdp"
                android:singleLine="true"
                android:textColorHint="@color/color_4D4D4D"
                android:textSize="@dimen/txtSizeSmall" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtDescription"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_100sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/bg_edit_rounded"
                android:elevation="@dimen/_1sdp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="top|left"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:lines="5"
                android:maxLines="10"
                android:minHeight="@dimen/_80sdp"
                android:minLines="3"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/color_4D4D4D"
                android:textSize="@dimen/txtSizeSmall" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnAddReview"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btnNormalSize"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/bg_rounded_blue_5sdp"
                android:elevation="@dimen/_2sdp"
                android:fontFamily="@font/poppins_regular"
                android:foreground="@drawable/ripple_rec"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/txtSizeNormal" />


        </LinearLayout>


    </LinearLayout>
</layout>